--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:srcCompat="@drawable/ethereumtext" />
+        app:srcCompat="@drawable/bitadministrator" />
 
     <LinearLayout
         android:id="@+id/qrico"
